bug fix: fixing height overflow issue and code cleanup

--- a/src/container/form.scss
+++ b/src/container/form.scss
@@ -2,8 +2,10 @@
     width: 100%;
     max-width: 475px;
     position: relative;
-    margin-bottom: 100px;
-    
+    margin: 0 20px 80px;
+    @media screen and (max-height: 695px){
+        margin: 0 20px 50px;
+    }
     &-inner {
         font-weight: 500;
         color: #000;
